# dbm-systray

./: .gitignore  README.md  pyproject.toml  requirements.txt
src/db_manager/: app.py
